# src/api/src/main/java/com/bankofz/inqcust/api/inqacccu/domain/AccountRelationshipResponse.java
@@ -1,0 +1,8 @@
+package com.bankofz.inqcust.api.inqacccu.domain;
+
+public record AccountRelationshipResponse(
+        LegacyStatus legacyStatus,
+        CustomerSummary customer,
+        AccountsList accounts
+) {
+}
