# src/api/src/main/java/com/bankofz/inqcust/api/inqacccu/repository/model/AccountProjection.java
@@ -1,0 +1,17 @@
+package com.bankofz.inqcust.api.inqacccu.repository.model;
+
+import java.math.BigDecimal;
+
+public record AccountProjection(
+        String accountNumber,
+        String sortCode,
+        String accountType,
+        String accountTypeDescription,
+        BigDecimal availableBalance,
+        BigDecimal actualBalance,
+        BigDecimal interestRate,
+        Integer overdraftLimit,
+        Integer lastStatementDate,
+        Integer nextStatementDate
+) {
+}
