# src/api/src/main/java/com/bankofz/inqcust/api/inqacccu/repository/model/CustomerProjection.java
@@ -1,0 +1,9 @@
+package com.bankofz.inqcust.api.inqacccu.repository.model;
+
+public record CustomerProjection(
+        String customerNumber,
+        String customerName,
+        String sortCode,
+        String customerType
+) {
+}
